tests/machine/x/cobol/min_max_builtin.cob
*> Generated by Mochi compiler v0.10.27 on 2025-07-17T07:47:02Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. MIN-MAX-BUILTIN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 NUMS.
           05 E1 PIC 9 VALUE 3.
           05 E2 PIC 9 VALUE 1.
           05 E3 PIC 9 VALUE 4.
       01 TMP PIC 9(9) VALUE 0.
       01 TMP-STR PIC Z(18).
       PROCEDURE DIVISION.
       DISPLAY 1
       DISPLAY 4
       STOP RUN.
